GNOME Bugzilla – Bug 768545
Cannot change MP4 encoder settings
Last modified: 2016-07-27 12:26:04 UTC
This is on fedora 24 with versions: gstreamer1-plugins-bad-free-1.8.2-1.fc24.x86_64 gstreamer1-plugins-base-1.8.2-1.fc24.x86_64 gstreamer1-plugins-good-1.8.2-1.fc24.x86_64 gstreamer1-plugins-ugly-1.8.2-1.fc24.x86_64 rhythmbox-3.3.1-1.fc24.x86_64 I actually noticed the same thing on ubuntu 16.04.
What do you mean?
I fixed it by installing the non-free package for gstreamer. Works now. AAC playback doesn't though. But that's a different issue.
There is an actual problem here. When you select a format that you don't have an encoder for, you should be prompted to install the missing plugins, but this doesn't work any more due to some changes in gstreamer.
fixed in commit 165a82e