encoder: explicitly check that an encoder is available

encodebin can operate in passthrough mode, in which it doesn't require
an encoder, so it doesn't post missing plugin messages if no encoder is
available.  We now check this ourselves.

https://bugzilla.gnome.org/show_bug.cgi?id=768545